@@ -1,3 +1,0 @@
-Jinja2 is a template engine written in pure Python. It provides a Django
-inspired non-XML syntax but supports inline expressions and an optional
-sandboxed environment.
